--- a/index.html
+++ b/index.html
@@ -2,62 +2,81 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>NEXO Redirecionamento</title>
-  <meta http-equiv="refresh" content="5; url=https://nexo.abacusai.app" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="description" content="NEXO - Núcleo de Excelência Operacional da Cogna Educação" />
+  <meta property="og:title" content="NEXO – Núcleo de Excelência Operacional" />
+  <meta property="og:site_name" content="NEXO" />
+  <meta property="og:url" content="https://nucleodeexcelenciaoperacional.github.io/nexo/" />
+  <title>NEXO – Núcleo de Excelência Operacional</title>
   <style>
     body {
       margin: 0;
-      padding: 0;
-      background-color: #FFE54F;
-      font-family: 'Segoe UI', sans-serif;
+      font-family: "Poppins", sans-serif;
+      background-color: #fff8e1;
+      color: #1E1E1E;
       display: flex;
       flex-direction: column;
-      justify-content: center;
       align-items: center;
-      height: 100vh;
+      padding: 40px 20px;
       text-align: center;
     }
 
+    .logo {
+      margin-top: 40px;
+    }
+
     h1 {
-      font-size: 2.5em;
-      color: #222;
-      margin-bottom: 0.5em;
+      font-family: "Fredoka One", sans-serif;
+      font-size: 36px;
+      margin: 20px 0 10px;
     }
 
     p {
-      font-size: 1.2em;
-      color: #444;
-      margin-bottom: 1.5em;
+      max-width: 700px;
+      font-size: 18px;
+      line-height: 1.6;
     }
 
-    .btn {
-      background-color: #222;
-      color: #FFE54F;
-      border: none;
-      padding: 15px 30px;
-      font-size: 1em;
-      border-radius: 8px;
-      cursor: pointer;
+    .botao {
+      margin-top: 30px;
+      padding: 12px 24px;
+      background-color: #FFD54F;
+      color: #1E1E1E;
       text-decoration: none;
       font-weight: bold;
-      box-shadow: 0 5px 10px rgba(0,0,0,0.2);
+      border-radius: 8px;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
+      transition: background 0.3s ease;
     }
 
-    .btn:hover {
-      background-color: #333;
+    .botao:hover {
+      background-color: #ffc107;
     }
 
-    img {
-      width: 150px;
-      margin-bottom: 1em;
+    footer {
+      margin-top: 60px;
+      font-size: 12px;
+      color: #888;
     }
   </style>
 </head>
 <body>
-  <img src="https://uploadthing.com/f/7b7f0641-9a3f-4ac0-ae3c-7a37973ae3a5-melli-padrao.png" alt="Melli do NEXO com laptop"/>
-  <h1>Bem-vinda ao NEXO!</h1>
-  <p>Você será redirecionada em instantes...</p>
-  <a href="https://nexo.abacusai.app" class="btn">Acessar agora</a>
+
+  <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/56/Cogna_logo.png/320px-Cogna_logo.png" alt="Logo Cogna" width="160" />
+  
+  <h1>NEXO</h1>
+  <h2>Núcleo de Excelência Operacional</h2>
+
+  <p>
+    Bem-vinda ao NEXO – o hub estratégico que conecta Produto, Tecnologia, Estratégia e Eficiência Operacional na Cogna Educação.
+    Aqui você encontra direção, processos, trilhas e comunidade para potencializar a entrega de valor.
+  </p>
+
+  <a href="https://seusite.sharepoint.com/sites/nexo" class="botao" target="_blank">Acessar o Portal NEXO no SharePoint</a>
+
+  <footer>
+    © 2025 – NEXO · Cogna Educação
+  </footer>
+
 </body>
 </html>
