--- a/index.html
+++ b/index.html
@@ -2,81 +2,82 @@
 <html lang="pt-BR">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <meta name="description" content="NEXO - Núcleo de Excelência Operacional da Cogna Educação" />
-  <meta property="og:title" content="NEXO – Núcleo de Excelência Operacional" />
-  <meta property="og:site_name" content="NEXO" />
-  <meta property="og:url" content="https://nucleodeexcelenciaoperacional.github.io/nexo/" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>NEXO – Núcleo de Excelência Operacional</title>
   <style>
     body {
       margin: 0;
-      font-family: "Poppins", sans-serif;
-      background-color: #fff8e1;
-      color: #1E1E1E;
+      padding: 0;
+      background-color: #FFF6CC;
+      font-family: 'Segoe UI', sans-serif;
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 40px 20px;
+      justify-content: center;
       text-align: center;
+      height: 100vh;
     }
 
-    .logo {
-      margin-top: 40px;
+    img.logo {
+      width: 120px;
+      margin-bottom: 20px;
     }
 
     h1 {
-      font-family: "Fredoka One", sans-serif;
-      font-size: 36px;
-      margin: 20px 0 10px;
+      font-size: 2.5em;
+      font-weight: bold;
+      margin: 0;
+      color: #222;
+    }
+
+    h2 {
+      font-size: 1.5em;
+      margin-top: 10px;
+      color: #444;
     }
 
     p {
-      max-width: 700px;
-      font-size: 18px;
-      line-height: 1.6;
+      font-size: 1.1em;
+      max-width: 600px;
+      color: #333;
+      margin: 20px auto;
     }
 
-    .botao {
-      margin-top: 30px;
-      padding: 12px 24px;
-      background-color: #FFD54F;
-      color: #1E1E1E;
-      text-decoration: none;
+    a.btn {
+      background-color: #FFC800;
+      color: #222;
       font-weight: bold;
+      padding: 15px 30px;
+      text-decoration: none;
       border-radius: 8px;
-      box-shadow: 0 4px 8px rgba(0,0,0,0.1);
-      transition: background 0.3s ease;
+      font-size: 1em;
+      box-shadow: 0 4px 8px rgba(0,0,0,0.15);
     }
 
-    .botao:hover {
-      background-color: #ffc107;
+    a.btn:hover {
+      background-color: #FFD700;
     }
 
     footer {
-      margin-top: 60px;
-      font-size: 12px;
-      color: #888;
+      margin-top: 40px;
+      font-size: 0.9em;
+      color: #777;
     }
   </style>
 </head>
 <body>
 
-  <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/thumb/5/56/Cogna_logo.png/320px-Cogna_logo.png" alt="Logo Cogna" width="160" />
-  
+  <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/2/28/Logo_Cogna.png" alt="Logo Cogna" />
+
   <h1>NEXO</h1>
   <h2>Núcleo de Excelência Operacional</h2>
 
-  <p>
-    Bem-vinda ao NEXO – o hub estratégico que conecta Produto, Tecnologia, Estratégia e Eficiência Operacional na Cogna Educação.
-    Aqui você encontra direção, processos, trilhas e comunidade para potencializar a entrega de valor.
-  </p>
+  <p>Bem-vinda ao NEXO – o hub estratégico que conecta Produto, Tecnologia, Estratégia e Eficiência Operacional na Cogna Educação. Aqui você encontra direção, processos, trilhas e comunidade para potencializar a entrega de valor.</p>
 
-  <a href="https://seusite.sharepoint.com/sites/nexo" class="botao" target="_blank">Acessar o Portal NEXO no SharePoint</a>
+  <a class="btn" href="https://kroton.sharepoint.com/sites/NEXO9/" target="_blank">
+    Acessar o Portal NEXO no SharePoint
+  </a>
 
-  <footer>
-    © 2025 – NEXO · Cogna Educação
-  </footer>
-
+  <footer>© 2025 – NEXO · Cogna Educação</footer>
 </body>
 </html>
