--- a/index.html
+++ b/index.html
@@ -18,11 +18,6 @@
       height: 100vh;
     }
 
-    img.logo {
-      width: 120px;
-      margin-bottom: 20px;
-    }
-
     h1 {
       font-size: 2.5em;
       font-weight: bold;
@@ -67,12 +62,10 @@
 </head>
 <body>
 
-  <img class="logo" src="https://upload.wikimedia.org/wikipedia/commons/2/28/Logo_Cogna.png" alt="Logo Cogna" />
-
   <h1>NEXO</h1>
   <h2>Núcleo de Excelência Operacional</h2>
 
-  <p>Bem-vinda ao NEXO – o hub estratégico que conecta Produto, Tecnologia, Estratégia e Eficiência Operacional na Cogna Educação. Aqui você encontra direção, processos, trilhas e comunidade para potencializar a entrega de valor.</p>
+  <p>Bem-vindx ao NEXO – o hub estratégico que conecta Produto, Tecnologia, Estratégia e Eficiência Operacional na Cogna Educação. Aqui você encontra direção, processos, trilhas e comunidade para potencializar a entrega de valor.</p>
 
   <a class="btn" href="https://kroton.sharepoint.com/sites/NEXO9/" target="_blank">
     Acessar o Portal NEXO no SharePoint
