--- a/index.html
+++ b/index.html
@@ -18,6 +18,11 @@
       height: 100vh;
     }
 
+    img.logo {
+      width: 120px;
+      margin-bottom: 20px;
+    }
+
     h1 {
       font-size: 2.5em;
       font-weight: bold;
@@ -74,3 +79,4 @@
   <footer>© 2025 – NEXO · Cogna Educação</footer>
 </body>
 </html>
+
