--- a/index.html
+++ b/index.html
@@ -18,11 +18,6 @@
       height: 100vh;
     }
 
-    img.logo {
-      width: 120px;
-      margin-bottom: 20px;
-    }
-
     h1 {
       font-size: 2.5em;
       font-weight: bold;
@@ -43,7 +38,7 @@
       margin: 20px auto;
     }
 
-    a.btn {
+    .btn {
       background-color: #FFC800;
       color: #222;
       font-weight: bold;
@@ -52,9 +47,11 @@
       border-radius: 8px;
       font-size: 1em;
       box-shadow: 0 4px 8px rgba(0,0,0,0.15);
+      margin: 10px;
+      display: inline-block;
     }
 
-    a.btn:hover {
+    .btn:hover {
       background-color: #FFD700;
     }
 
@@ -70,13 +67,17 @@
   <h1>NEXO</h1>
   <h2>Núcleo de Excelência Operacional</h2>
 
-  <p>Bem-vindx ao NEXO – o hub estratégico que conecta Produto, Tecnologia, Estratégia e Eficiência Operacional na Cogna Educação. Aqui você encontra direção, processos, trilhas e comunidade para potencializar a entrega de valor.</p>
+  <p>Bem-vinda ao NEXO – o hub estratégico que conecta Produto, Tecnologia, Estratégia e Eficiência Operacional na Cogna Educação. Aqui você encontra direção, processos, trilhas e comunidade para potencializar a entrega de valor.</p>
 
-  <a class="btn" href="https://kroton.sharepoint.com/sites/NEXO9/" target="_blank">
-    Acessar o Portal NEXO no SharePoint
-  </a>
+  <div>
+    <a class="btn" href="https://kroton.sharepoint.com/sites/NEXO9/" target="_blank">
+      Acessar o Portal NEXO no SharePoint
+    </a>
+    <a class="btn" href="https://nexo.abacusai.app" target="_blank">
+      Acessar o Portal de IA (Abacus)
+    </a>
+  </div>
 
   <footer>© 2025 – NEXO · Cogna Educação</footer>
 </body>
 </html>
-
