--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
   <h1>NEXO</h1>
   <h2>Núcleo de Excelência Operacional</h2>
 
-  <p>Bem-vinda ao NEXO – o hub estratégico que conecta Produto, Tecnologia, Estratégia e Eficiência Operacional na Cogna Educação. Aqui você encontra direção, processos, trilhas e comunidade para potencializar a entrega de valor.</p>
+  <p>Bem-vindx ao NEXO – o hub estratégico que conecta Produto, Tecnologia, Estratégia e Eficiência Operacional na Cogna Educação. Aqui você encontra direção, processos, trilhas e comunidade para potencializar a entrega de valor.</p>
 
   <div>
     <a class="btn" href="https://kroton.sharepoint.com/sites/NEXO9/" target="_blank">
