--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
 
   <div>
     <a class="btn" href="https://kroton.sharepoint.com/sites/NEXO9/" target="_blank">
-      Acessar o Portal NEXO no SharePoint
+      Portal SharePoint NEXO (Interno Cogna)
     </a>
     <a class="btn" href="https://nexo.abacusai.app" target="_blank">
-      Acessar o Portal de IA (Abacus)
+      Portal da Comunidade NEXO (Externo Cogna)
     </a>
   </div>
 
